# DetectMatePerformance

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  compile.sh  docker-compose.yml  install_compile.sh  mkdocs.yml  pyproject.toml  pytest.ini  setup.py  versions.json
.github/workflows/: publish-docs.yml  python-app.yml
DetectMatePerformance/: __init__.py  run_benchmark.py
DetectMatePerformance/src/: aux.py  match_tree.py  message.py  polars_op.py  types_.py
DetectMatePerformance/src/_core/: aux.cpp  message.h  message_bind.cpp  messages.cpp
DetectMatePerformance/src/_core/_type/: message.h  messages.cpp  parsed.cpp  parsed.h  templates.cpp  templates.h
DetectMatePerformance/src/_core/template_matcher/: match_tree.cpp  match_tree.h  tree.cpp  tree_op.cpp  tree_op.h  variables.cpp  variables.h
DetectMatePerformance/tests/test_c/: test_matcher_op.cpp  test_matcher_tree.cpp  test_matcher_vars.cpp  test_message.cpp  test_type.cpp
DetectMatePerformance/tests/test_python/: test_dummy_p.py  test_match_tree.py  test_messages.py  test_types.py
detectmateperformance/: __init__.py  run_benchmark.py
detectmateperformance/src/: __init__.py  match_tree.py  pipeline_op.py  polars_op.py  types_.py
detectmateperformance/src/_core/: aux.h
detectmateperformance/src/_core/template_matcher/: match_tree.h  tree.h  tree_op.h
detectmateperformance/src/metrics/: __init__.py  _methods.py  _op.py
detectmateperformance/tests/test_c/: test_message.cpp
detectmateperformance/tests/test_python/: test_match_tree.py  test_types.py
development/: 404.html  index.html  sitemap.xml
development/metrics/: index.html
development/search/: search_index.json
development/tree_matcher/: index.html
development/types/: index.html
docs/: index.md  metrics.md  tree_matcher.md  types.md
main/: 404.html  index.html  search.html  sitemap.xml
main/metrics/: index.html
main/search/: search_index.json
main/tree_matcher/: index.html
main/types/: index.html
src/: run_benchmark.py
src/detectmateperformance/: __init__.py  match_tree.py  pipeline_op.py  types_.py
src/detectmateperformance/_core/: __init__.py  aux.cpp  aux.h  bind_class.cpp
src/detectmateperformance/_core/_type/: element.cpp  element.h  parsed.cpp  parsed.h  templates.cpp  templates.h
src/detectmateperformance/_core/template_matcher/: match_tree.cpp  match_tree.h  tree.cpp  tree.h  tree_op.cpp  tree_op.h  variables.cpp  variables.h
src/detectmateperformance/metrics/: __init__.py  _methods.py  _op.py
tests/test_c/: test_matcher_tree.cpp  test_matcher_vars.cpp  test_message.cpp  test_type.cpp
tests/test_data/: incomplete_templates.txt
tests/test_python/: test_match_tree.py  test_metrics.py  test_types.py
