# add cmake to build requirements
[build-system]
requires = ["setuptools", "wheel", "cmake"]
build-backend = "setuptools.build_meta"

[project]
name = "detectmateperformance"
version = "0.1.0"
description = "A Python package for DetectMate performance evaluation."
requires-python = ">=3.12"
dependencies = [
    "levenshtein>=0.27.3",
    "numpy>=2.4.3",
    "polars>=1.38.1",
    "pybind11>=3.0.2",
    "pytest",
    "pytest-cpp",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["_core/bind_class.cpython-312-x86_64-linux-gnu.so"]
