# add cmake to build requirements
[build-system]
requires = ["setuptools", "wheel", "cmake"]
build-backend = "setuptools.build_meta"

[project]
name = "detectmateperformance"
version = "0.1.0"
description = "A Python package for DetectMate performance evaluation."
requires-python = ">=3.13"
dependencies = [
    "levenshtein>=0.27.3",
    "numpy>=2.4.3",
    "polars>=1.38.1",
    "pybind11>=3.0.2",
    "setuptools>=82.0.1",
    "tqdm",
]

[dependency-groups]
# add dependencies in this section with: uv add --optional dev <package>
# install with all the dev dependencies:  uv pip install -e .[dev]
dev = [
    "mike>=2.1.3",
    "prek>=0.2.8",
    "pytest>=8.4.2",
    "pytest-cov>=6.2.1",
    "pytest-cpp",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["lib/bind_class.*"]
